Fix locations alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,7 +11,6 @@ body {
   font-size: 22px;
   color: seashell;
   background-color: black;
-  opacity: 0.9;
   text-align: center;
   margin: 0;
 }
@@ -19,6 +18,10 @@ body {
 a {
   color: white;
   text-decoration: underline;
+}
+
+#email {
+  text-decoration: none;
 }
 
 img {
@@ -130,7 +133,44 @@ height: 300px;
 
 /* locations styles  */
 
-.locations_container {
+.shops_big_container {
+  position: relative;
+  top: 220px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.shops_container {
+  width: 1200px;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
+}
+
+.shops_container_blocks {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px 15px 15px 0px;
+
+}
+
+.shops_col {
+  flex-grow: 1;
+  width: 300px;
+  line-height: 70px;
+  background-color: black;
+  margin: 15px 20px 15px 20px;
+}
+
+#shops_three {
+  opacity: 0.9;
+}
+
+
+/* .locations_container {
   width: 1200px;
   height: 500px;
   position: relative;
@@ -169,17 +209,17 @@ height: 300px;
   line-height: 70px;
   /* width: 100%;
   height: 100%; */
-  border: 1px solid red;
+  /* border: 1px solid red;
 
   background-color: black;
-}
+} */
 
 footer {
     top: 220px;
     position: relative;
 }
 
-footer h2, h5{
+footer h5{
     padding: 20px 20px;
 }
 
